--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=spring-boot-docker
+# ===============================
+# CONFIGURACIÓN BÁSICA DEL SERVIDOR
+# ===============================
+server.port=8080
+
+# ===============================
+# DATASOURCE (MYSQL – RAILWAY)
+# ===============================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 2. Configuración usando placeholders de variables de entorno
+spring.datasource.url=jdbc:mysql://root:kHmdLvwoEyojeWLImtnwxwmLzqansGiN@centerbeam.proxy.rlwy.net:53198/railway
+spring.datasource.username=root
+spring.datasource.password=kHmdLvwoEyojeWLImtnwxwmLzqansGiN
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# LOGS
+# ===============================
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
